--- a/blog/templates/blog/blog.html
+++ b/blog/templates/blog/blog.html
@@ -18,7 +18,7 @@
                             <img class="mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="{{post.image.url}}" alt="">
                             </p>
                             <p class="mb-0 mbt">
-                            {{post.content}}
+                            {{post.content|linebreaks}}
                             </p>
                             <p class="mb-0 mbt">
                             <span class="section-heading-under">Publicado por <em><b>{{p.author}}</b></em> en <em><a href="#" class="link">General</a>, <a href="#" class="link">Ofertas</a></em></span>
