--- a/blog/templates/blog/category.html
+++ b/blog/templates/blog/category.html
@@ -4,7 +4,8 @@
 
 {% block content %}
     {% load static %}
-    {% for post in posts %}
+    {% for post in category.get_posts.all %}
+    <!--% for post in category.post_set.all %}-->
         <section class="page-section cta">
             <div class="container">
                 <div class="row">
