--- a/blog/templates/blog/blog.html
+++ b/blog/templates/blog/blog.html
@@ -23,11 +23,12 @@
                             <p class="mb-0 mbt">
                             <span class="section-heading-under">Publicado por <em><b>{{p.author}}</b></em> en
                                 <!--<em><a href="#" class="link">General</a>, <a href="#" class="link">Ofertas</a></em></span>-->
-                                {% for category in post.categories.all %}
-                                    {{category.name}}{% if not forloop.last %},{% endif %}
-                                {% endfor %}
+                                <em>
+                                    {% for category in post.categories.all %}
+                                        <a href="{% url 'category' category.id %}" class="link">{{category.name}}</a>{% if not forloop.last %},{% endif %}
+                                    {% endfor %}
+                                </em>
                             </span>
-                            </p>
                         </div>
                     </div>
                 </div>
